Add ale theme, use color.sh

--- a/polybar-1/config.ini
+++ b/polybar-1/config.ini
@@ -13,11 +13,14 @@
 
 [color]
 
-bg = #1F1F1F
+# bg = #0F1524
+bg = #0F1524
+# bg = #0F1524
 fg = #FFFFFF
 fg-alt = #A9ABB0
 
-acolor = #00897b
+acolor = #545594
+#00897b
 curgent = #e53935
 coccupied = #1e88e5
 
@@ -47,10 +50,10 @@ blue-gray = #546e7a
 
 [bar/main]
 monitor = 
-width = 90%
-height = 40
-offset-x = 5%
-offset-y = 2%
+width = 100%
+height = 24
+# offset-x = 5%
+# offset-y = 2%
 bottom = true
 fixed-center = false
 line-size = 2
@@ -73,7 +76,7 @@ font-1 = "Material Icons:size=13;4"
 
 cursor-click = pointer
 
-;tray-position = right
+tray-position = right
 ;tray-padding = 0
 ;tray-maxsize = 16
 enable-ipc = true
@@ -84,14 +87,16 @@ scroll-down = i3wm-wsprev
 ;== Module Location ========================================================
 
 modules-left = menu workspaces term files browser settings
-modules-right = mpd pkg volume battery network date powermenu
+modules-right = mpd pkg volume battery network screen date powermenu
  
 ;== Modules ========================================================
 
 [module/menu]
 type = custom/text
-content = 
-;alt-icon = 
+; content = =^.^=
+content = =Φ.Φ=
+; content = 
+; alt-icon = 
 content-padding = 2
 content-background = ${color.acolor}
 content-foreground = ${color.fg}
@@ -252,6 +257,13 @@ interval = 30
 label =  %time%
 time =  %H:%M %p
 time-alt =  %Y-%m-%d
+
+[module/screen]
+type = custom/script
+exec = ~/.config/polybar/scripts/backlight.sh
+scroll-up = light -A 5
+scroll-down = light -U 5
+tail = true
 
 [module/powermenu]
 type = custom/text
